# mastermind

./: CMakeLists.txt  README.md  prj.conf
7seg_driver_module/: CMakeLists.txt
7seg_driver_module/drivers/: CMakeLists.txt  Kconfig
7seg_driver_module/drivers/auxdisplay/: CMakeLists.txt  Kconfig
boards/: nrf52dk_nrf52832.overlay  promicro_nrf52840_nrf52840_uf2.overlay
dts/bindings/: pwm-buzzer.yaml
flutter-app/: README.md  pubspec.yaml
flutter-app/android/app/: build.gradle.kts
flutter-app/lib/: main.dart
flutter-app/linux/: CMakeLists.txt
flutter-app/web/: index.html
flutter-app/windows/: CMakeLists.txt
pcb/: README.md  _autosave-mastermind.kicad_pcb  fp-info-cache  fp-lib-table  mastermind.bak  mastermind.kicad_pcb  mastermind.kicad_prl  mastermind.kicad_pro  mastermind.kicad_sch  mastermind.kicad_sch-bak  mastermind.kicad_sym  sym-lib-table  ~mastermind.kicad_sch.lck
pcb/mastermind.pretty/: 7seg.kicad_mod  LED Strip 2 LED.kicad_mod  LED Strip 4 LED.kicad_mod  SW_PUSH-12mm.kicad_mod  SuperMini NRF52840.kicad_mod
pcb/output/: mastermind-B_Cu.gbl  mastermind-B_Mask.gbs  mastermind-B_Paste.gbp  mastermind-B_Silkscreen.gbo  mastermind-Edge_Cuts.gm1  mastermind-F_Cu.gtl  mastermind-F_Mask.gts  mastermind-F_Paste.gtp  mastermind-F_Silkscreen.gto  mastermind-NPTH.drl  mastermind-PTH.drl  mastermind-job.gbrjob
src/: app_cfg.hpp  ble.cpp  ble.hpp  buttons.cpp  buttons.hpp  buzzer.cpp  buzzer.hpp  code.cpp  combination.cpp  combination.hpp  display.cpp  display.hpp  eth_profile.h  led.cpp  leds.cpp  leds.hpp  main.cpp
(+17 files in other folders)
